# verlet

./: CMakeLists.txt  Makefile2  Particle.cpp  Particle.h  README.md  Utils.cpp  Utils.h  main.cpp  main_par.cpp  main_seq.cpp  print_seq.py  results.txt  run.batch  script.py  script2.py  test_data.txt
visualise/: vis.ipynb
visualise/.ipynb_checkpoints/: res1_1-checkpoint.txt  vis-checkpoint.ipynb
